<resources>
    <!-- Actions -->
    <string name="add_exercise">Add Exercise</string>
    <string name="add_lift">Add Lift</string>
    <string name="clear_exercise_filter">Clear Exercise Filter</string>
    <string name="continue_previous_workout">Continue Previous Workout</string>
    <string name="create_exercise">Create Exercise</string>
    <string name="edit_exercise">Edit Exercise</string>
    <string name="edit_workout">Edit Workout</string>
    <string name="filter_exercises">Filter Exercises…</string>
    <string name="go_to_workout">Go to workout</string>
    <string name="start_new_workout">Start New Workout</string>
    <string name="undo">Undo</string>
    <string name="view_exercises">View Exercises</string>

    <!-- Fields -->
    <string name="comment">Comment</string>
    <string name="exercise_description">Exercise Description</string>
    <string name="exercise_name">Exercise Name</string>
    <string name="last_performed_on">Last performed on</string>
    <string name="reps">Reps</string>
    <string name="weight">Weight</string>
    <string name="workout_description">Workout Description</string>

    <!-- Titles -->
    <string name="exercises">Exercises</string>
    <string name="exercise_detail">Exercise Detail</string>
    <string name="new_workout">New Workout</string>
    <string name="workouts">Workouts</string>
    <string name="workout_detail">Workout Detail</string>
    <string name="workout_history">Workout History</string>

    <!-- User Feedback -->
    <string name="cancel">Cancel</string>
    <string name="exercise_name_not_valid">Exercise name not valid.</string>
    <string name="lift_not_added">Lift not added.</string>
    <string name="lift_not_updated">Lift not updated.</string>
    <string name="lift_not_valid">Lift not valid.</string>
    <string name="lift_updated">Lift updated.</string>
    <string name="no_workouts_to_continue">No workouts to continue.</string>
    <string name="ok">OK</string>
    <string name="workout_not_added">Workout not added.</string>
    <string name="workout_not_updated">Workout not updated.</string>
    <string name="workout_updated">Workout updated.</string>

    <!-- Misc -->
    <string name="app_name">Log My Lift</string>
    <string name="bench_press">Bench Press</string>
    <string name="bench_press_description">Flat barbell bench press</string>
    <string name="deadlift_description">Conventional deadlift</string>
    <string name="deadlift">Deadlift</string>
    <string name="squat">Squat</string>
    <string name="squat_description">Barbell squat</string>
    <string name="max_effort">Max Effort</string>
    <string name="exercise_updated">Exercise updated.</string>
    <string name="exercise_not_updated">Exercise not updated.</string>
    <string name="edit_lift">Edit Lift</string>
    <string name="copy_lift">Copy Lift</string>
    <string name="delete_lift">Delete Lift</string>
    <string name="delete_exercise">Delete Exercise</string>
    <string name="exercise_information">Exercise Information</string>
    <string name="exercise_history">Exercise History</string>
    <string name="package_name">edu.wvu.tsmith.logmylift</string>
    <string name="database_backup_name">logmylift_backup.db</string>
    <string name="settings">Settings</string>
    <string name="suggested_exercises_text">Suggested Exercises</string>
    <string name="suggested_text">Suggested</string>
    <string name="filter_workouts">Filter Workouts…</string>
    <string name="clear_workout_filter">Clear Workout Filter</string>
    <string name="pick_date_range">Pick Date Range</string>
    <string name="exercise_info">Exercise Info</string>
    <string name="workout_duration">Workout duration: </string>
    <string name="lifts_performed">Lifts performed: </string>
    <string name="workout_statistics">Workout Statistics</string>
    <string name="average_time_per_lift">Average time per lift:</string>
    <string name="calculate_percentage_of_max">Calculate Percentage of Max</string>
    <string name="sort_exercise_history">Sort Exercise History</string>
    <string name="change_sort_order">Change Sort Order</string>
    <string name="max_effort_lift">Max Effort Lift</string>
    <string name="add_workout">Add Workout</string>
    <string name="heaviest_lift">Heaviest Lift:</string>
    <string name="workouts_performed_during">Workouts performed during:</string>
    <string name="trends">Trends</string>
    <string name="exercise_stats">Exercise Statistics</string>
    <string name="max_effort_trend">Max Effort Trend</string>
    <string name="weight_trend">Weight Trend</string>
    <string name="max_weight_lift">Heaviest Lift</string>
    <string name="update_training_weight">Update training weight</string>
    <string-array name="date_filter_array">
        <item>All Time</item>
        <item>This Year</item>
        <item>6 Months</item>
        <item>This Month</item>
    </string-array>
</resources>
