<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/edit_workout_menu_item"
        android:orderInCategory="1"
        android:title="@string/edit_workout"
        android:icon="@drawable/ic_mode_edit_white_24dp"
        app:showAsAction="ifRoom">
    </item>
    <item
        android:id="@+id/workout_stats_menu_item"
        android:orderInCategory="2"
        android:title="@string/workout_statistics"
        android:icon="@drawable/ic_info_outline_white_24dp"
        app:showAsAction="ifRoom">
    </item>
    <item
        android:id="@+id/add_exercise_menu_item"
        android:orderInCategory="3"
        android:title="@string/add_exercise"
        app:showAsAction="never">
    </item>
    <item
        android:id="@+id/suggested_exercises_menu_item"
        android:orderInCategory="4"
        android:title="@string/suggested_exercises_text"
        app:showAsAction="never">
    </item>
    <item
        android:id="@+id/percent_max_menu_item"
        android:orderInCategory="5"
        android:title="@string/calculate_percentage_of_max"
        app:showAsAction="never">
    </item>
</menu>