<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10sp"
        android:id="@+id/exercise_name_text_view"
        android:text="@string/exercise_name"
        style="@style/ListMinorTextView"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10sp"
        android:id="@+id/exercise_max_effort_text_view"
        android:text="@string/max_effort"
        style="@style/ListMinorTextView"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10sp"
        android:id="@+id/exercise_heaviest_lift_text_view"
        android:text="@string/heaviest_lift"
        style="@style/ListMinorTextView"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10sp"
        android:id="@+id/lifts_performed_text_view"
        android:text="@string/lifts_performed"
        style="@style/ListMinorTextView"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10sp"
        android:id="@+id/workouts_performed_text_view"
        android:text="@string/workouts_performed_during"
        style="@style/ListMinorTextView"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/dialog_button_height"
        android:layout_marginStart="@dimen/dialog_start_and_end_horizontal_margins"
        android:layout_marginEnd="@dimen/dialog_start_and_end_horizontal_margins"
        android:layout_marginBottom="@dimen/dialog_vertical_margin"
        android:text="@string/max_effort_trend"
        android:textColor="@android:color/white"
        android:background="@drawable/rounded_button"
        android:id="@+id/max_effort_trend_button"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/dialog_button_height"
        android:layout_marginStart="@dimen/dialog_start_and_end_horizontal_margins"
        android:layout_marginEnd="@dimen/dialog_start_and_end_horizontal_margins"
        android:layout_marginBottom="@dimen/dialog_vertical_margin"
        android:text="@string/weight_trend"
        android:textColor="@android:color/white"
        android:background="@drawable/rounded_button"
        android:id="@+id/weight_trend_button"/>
</LinearLayout>