<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <AutoCompleteTextView
            android:id="@+id/exercise_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/exercise_name"/>
        <ImageButton
            android:id="@+id/clear_exercise_button"
            android:layout_gravity="end|center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:layout_marginEnd="@dimen/fab_margin"
            android:src="@drawable/ic_clear_black_24dp"
            android:contentDescription="@string/clear_exercise_filter"/>
    </FrameLayout>
    <LinearLayout
        android:id="@+id/weight_reps_horizontal_layout"
        android:paddingBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"/>
        <EditText
            android:id="@+id/weight_edit_text"
            android:hint="@string/weight"
            android:inputType="number"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:ellipsize="start"
            android:gravity="center_horizontal"
            android:textSize="22sp"/>
        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"/>
        <EditText
            android:id="@+id/reps_edit_text"
            android:hint="@string/reps"
            android:inputType="number"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:ellipsize="start"
            android:gravity="center_horizontal"
            android:textSize="22sp"/>
        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"/>
    </LinearLayout>
    <EditText
        android:id="@+id/comment_edit_text"
        android:hint="@string/comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:paddingBottom="10dp"
        style="@style/Widget.AppCompat.EditText"
        android:ellipsize="start"
        android:textSize="22sp"
        android:maxLines="1"/>
</LinearLayout>