<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/AppTheme.CardViewHolder">
    <android.support.v7.widget.CardView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/current_workout_card_view"
        style="@style/AppTheme.CardView">
        <ViewFlipper
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/card_view_flipper">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                android:id="@+id/exercise_name_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/ListMajorTextView"/>
            <LinearLayout
                android:id="@+id/weight_reps_horizontal_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/exercise_name_text_view"
                android:weightSum="3">
                <TextView
                    android:id="@+id/weight_and_reps_text_view"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    style="@style/ListMinorTextView"/>
                <TextView
                    android:id="@+id/lift_time_text_view"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:gravity="end"
                    style="@style/ListMinorTextView"/>
            </LinearLayout>
            <TextView
                android:id="@+id/comment_text_view"
                android:layout_below="@id/weight_reps_horizontal_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/ListMinorTextView"/>
            </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="4">
                <ImageButton
                    android:id="@+id/delete_lift_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/ic_delete_black_24dp"
                    android:background="@null"
                    android:contentDescription="@string/delete_lift"/>
                <ImageButton
                    android:id="@+id/exercise_info_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/ic_info_outline_black_24dp"
                    android:background="@null"
                    android:contentDescription="@string/exercise_info"/>
                <ImageButton
                    android:id="@+id/copy_lift_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/ic_content_copy_black_24dp"
                    android:background="@null"
                    android:contentDescription="@string/copy_lift"/>
                <ImageButton
                    android:id="@+id/edit_lift_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/ic_edit_black_24dp"
                    android:background="@null"
                    android:contentDescription="@string/edit_lift" />
            </LinearLayout>
        </ViewFlipper>
    </android.support.v7.widget.CardView>
</LinearLayout>